@@ -1,18 +1,21 @@
 package org.bbsk.mysender.fmkorea.service;
 
-import org.bbsk.mysender.crawler.SeleniumUtils;
+import com.microsoft.playwright.Browser;
+import com.microsoft.playwright.Locator;
+import com.microsoft.playwright.Page;
+import org.bbsk.mysender.crawler.PlayWrightUtils;
 import org.bbsk.mysender.fmkorea.constant.FmKoreaStockEnum;
 import org.bbsk.mysender.fmkorea.dto.ContentCrawlingDto;
 import org.bbsk.mysender.fmkorea.dto.FmKoreaArticleDto;
-import org.openqa.selenium.By;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+
+import java.net.URI;
 import java.time.LocalTime;
 import java.time.Duration;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
@@ -21,8 +24,6 @@ import java.util.stream.Collectors;
 public class FmKoreaCrawlingByPopularService {
 
     private static final Logger log = LoggerFactory.getLogger(FmKoreaCrawlingByPopularService.class);
-
-    private static final String CSS_SELECTOR_BY_POST_LIST = "div.fm_best_widget ul li";
 
     private final FmKoreaCrawlingService fmKoreaCrawlingService;
 
@@ -34,24 +35,26 @@ public class FmKoreaCrawlingByPopularService {
     /**
      * 인기글 크롤링
      *
-     * @param chromeDriver
+     * @param browser
      * @param now
      * @param crawlingTime 스케줄러 시간 -> 분 변환
      * @return
      */
-    public List<FmKoreaArticleDto> getFmKoreaCrawlingByPopularToStock(WebDriver chromeDriver, LocalTime now, long crawlingTime) {
+    public List<FmKoreaArticleDto> getFmKoreaCrawlingByPopularToStock(Browser browser, LocalTime now, long crawlingTime) {
         AtomicInteger workCnt = new AtomicInteger();
-        List<FmKoreaArticleDto> dtoList = getCrawlingToArticles(chromeDriver, crawlingTime, now)
+
+        List<FmKoreaArticleDto> dtoList = getCrawlingToArticles(browser, crawlingTime, now)
                 .stream()
                 .map(link -> {
-                    chromeDriver.get(link);
-                    ContentCrawlingDto crawlingDto = fmKoreaCrawlingService.getContentCrawling(chromeDriver);
-                    log.info("## Crawled {} posts", workCnt.incrementAndGet());
-                    return crawlingDto.getFmKoreaArticleDto();
+                    try (Page page = PlayWrightUtils.getBrowser().newPage()) {
+                        page.navigate(link);
+                        ContentCrawlingDto crawlingDto = fmKoreaCrawlingService.getContentCrawling(page);
+                        log.info("## Crawled {} posts", workCnt.incrementAndGet());
+                        return crawlingDto.getFmKoreaArticleDto();
+                    }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        SeleniumUtils.close(chromeDriver);
         log.info("## End Crawling");
 
         return dtoList;
@@ -60,19 +63,31 @@ public class FmKoreaCrawlingByPopularService {
     /**
      * 크롤링 시간 기준 크롤링 할 인기글 조회
      *
-     * @param chromeDriver
+     * @param browser
      * @param crawlingTime
      * @param now
      * @return
      */
-    private static List<String> getCrawlingToArticles(WebDriver chromeDriver, long crawlingTime, LocalTime now) {
-        return getParentElement(chromeDriver)
-                .findElements(By.cssSelector(CSS_SELECTOR_BY_POST_LIST))
-                .stream()
-                // takeWhile은 스트림을 순회하면서 조건이 false가 되는 순간 이후 요소들은 모두 무시
-                .takeWhile(article -> !isOverByCrawlingTime(crawlingTime, now, article))
-                .map(article -> article.findElement(By.cssSelector("h3.title a")).getAttribute("href"))
-                .collect(Collectors.toList());
+    private static List<String> getCrawlingToArticles(Browser browser, long crawlingTime, LocalTime now) {
+        Locator parentElement = getParentElement(browser);
+
+        // 게시글 리스트 항목들 추출
+        List<Locator> articles = parentElement.locator("ul > li.li").all();
+
+        List<String> result = new ArrayList<>();
+        for (Locator article : articles) {
+            if (isOverByCrawlingTime(crawlingTime, now, article)) {
+                break;
+            }
+
+            String href = article.locator("h3.title > a").getAttribute("href");
+            if (href != null) {
+                result.add(parentElement.page().url() + href);
+            }
+        }
+
+
+        return result;
     }
 
     /**
@@ -82,15 +97,17 @@ public class FmKoreaCrawlingByPopularService {
      * @param article 게시글
      * @return
      */
-    private static boolean isOverByCrawlingTime(long crawlingTime, LocalTime now, WebElement article) {
+    private static boolean isOverByCrawlingTime(long crawlingTime, LocalTime now, Locator article) {
         // 시간 가져오기
-        String articleTime = article.findElement(By.cssSelector("div > div > span.regdate")).getText().trim();
+        String articleTime = article.locator("span.regdate").innerText().trim();
         // 현재시간 기준 세시간 전 게시글인지
         Duration duration = Duration.between(LocalTime.parse(articleTime), now);
         return duration.toMinutes() > crawlingTime;
     }
 
-    private static WebElement getParentElement(WebDriver chromeDriver) {
-        return SeleniumUtils.getParentElement(FmKoreaStockEnum.POPULAR_URL.getValue(), FmKoreaStockEnum.POPULAR_CLASSNAME.getValue(), chromeDriver);
+    private static Locator getParentElement(Browser browser) {
+        Page page = browser.newPage();
+        page.navigate(FmKoreaStockEnum.POPULAR_URL.getValue());
+        return page.locator(FmKoreaStockEnum.POPULAR_CLASSNAME.getValue());
     }
 }
